# game_engine_512

./: .gitignore  Application.cpp  CMakeLists.txt  README.md
demos/Hive/: CMakeLists.txt  HiveGame.cpp
dependencies/learn_open_gl/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h
include/: Entity.h  MyShader.h  Shape.h  iDrawable.h  init_deps.h
include/HiveEngine/: HiveEngine.h  engine512_gui.h
include/classes/: Box.h  Entity.h  MyCamera.h  MyShader.h  Prop.h  Shape.h
include/engine/: engine512_gui.h
include/interfaces/: IControlable.h  iDrawable.h
resources/shaders/: Basic.shader  fragment_shader.shader  model_loading.shader  vertex_shader.shader
resources/shapes/: box.shape  hexagon.shape  triangle.shape
src/: Application.cpp  Entity.cpp  MyCamera.cpp  MyShader.cpp  Prop.cpp  Shape.cpp
